--- a/style.css
+++ b/style.css
@@ -251,6 +251,9 @@ article h1{
     0%{color: #ffffff; text-shadow: 0 0 15px rgb(14, 27, 37);}
     50%{color: rgb(14, 27, 37);text-shadow: 0 0 15px #ffffff;}
 }
+.type{
+  margin-top: 60px;
+}
 .attractionPic{
     height: 400px;
     margin-left:500px;
@@ -267,7 +270,6 @@ article h1{
 .attraction{
     width: 100%;
     height:fit-content;
-    margin-top: 70px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -275,6 +277,7 @@ article h1{
     border-radius: 10px;
     box-shadow: 0px 0px 5px 6px lightblue;
     align-items: center;
+    margin-bottom: 70px;
 }
 .attraction:hover .attractionPic{
     margin-left: 0;
@@ -379,7 +382,6 @@ article h1{
       opacity: 1
     }
   }
-  /* On smaller screens, decrease text size */
   @media only screen and (max-width: 300px) {
     .prev,
     .next,
@@ -454,6 +456,7 @@ section h1{
     opacity: 0;
     transition: opacity 2s ease;
     margin-left: 10px;
+    margin-right: 10px;
 }
 .food:hover .food_description{
     opacity: 1; 
@@ -464,10 +467,6 @@ section h1{
     padding: 10px;
     margin-bottom: 30px;
 }
-/* .sidebar{
-    width:25%;
-    background-color: grey;
-} */
 .history_container{
     display:flex;
     flex-direction: row;
@@ -649,4 +648,32 @@ ul li .descr::before {
 }
 #timeline{
     margin-top: 70px;
+}
+.table{
+  height:fit-content;
+  width:700px;
+  border:2px solid black;
+  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.table_row{
+  display: table-row
+}
+.cell{
+  display: table-cell;
+  border: 1px solid black;
+  height:200px;
+  width:350px;
+  /* text-align: center; */
+  vertical-align:middle;
+  font-size: 25px;
+}
+.cell h4,p{
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.history_header{
+  margin-bottom: 60px;
 }
